# Eindfees1212

./: Finesse3_different_geometries.ipynb
eindfeest/: pyproject.toml
eindfeest/src/: arduino_device
eindproject/: Results.csv  pyproject.toml
eindproject/src/eindproject/: arduino_device.py  gui.py  mainwindow.ui  nsp2visasim  sun_expirement.py  ui_mainwindow.py  view.py
eindproject/src/eindproject/davidfokkema_nsp2visasim_ A simulation of an Arduino VISA device connected to a small circuit_files/: 149482221  28599724  917137  917137(1)  wp-runtime-2d923b5bec8e.js.download
