[tool.poetry]
name = "eindproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "eindproject", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
